# maze-solver

./: .gitignore  CMakeLists.txt
docs/: GOALS.md
src/: CMakeLists.txt  main.cpp  maze.cpp  maze.hpp  maze_generator.cpp  maze_generator.hpp  maze_visualiser.cpp  maze_visualiser.hpp
tests/: CMakeLists.txt  test_maze_visualiser.cpp
